--- a/css/styles.css
+++ b/css/styles.css
@@ -248,6 +248,8 @@ p {
 .team-member {
   background-color: var(--simple-white-color);
   width: calc((100%-90px) / 4);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
 }
 
 .team-member:not(:last-child) {
