--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --bgc-section-team: #f5f4fa;
   --color-contacts-footer: rgba(255, 255, 255, 0.6);
   --border-color-in-portfolio: #eeeeee;
+  --border-color-page-header: #ececec;
 }
 
 /* -------------Universal------------- */
@@ -63,7 +64,7 @@ p {
 /* -------------Header------------- */
 
 .page-header {
-  border: 1px solid #ececec;
+  border-bottom: 1px solid var(--border-color-page-header);
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -101,7 +102,7 @@ p {
 }
 
 .header-contact-item:not(:last-child) {
-  padding-right: 40px;
+  margin-right: 40px;
 }
 
 .accent {
@@ -136,6 +137,8 @@ p {
 .hero {
   background-color: var(--bgc-footer-and-hero);
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-text {
@@ -188,7 +191,7 @@ p {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .features .list {
@@ -213,7 +216,7 @@ p {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .section.no-top-padding {
@@ -248,8 +251,9 @@ p {
 .team-member {
   background-color: var(--simple-white-color);
   width: calc((100%-90px) / 4);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-member:not(:last-child) {
@@ -257,7 +261,7 @@ border-radius: 0px 0px 4px 4px;
 }
 
 .team-member-photo {
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .team-member-name {
@@ -265,7 +269,7 @@ border-radius: 0px 0px 4px 4px;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .member-position {
@@ -273,7 +277,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.19;
   text-align: center;
   color: var(--secondary-text-color);
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 /* -------------Footer------------- */
@@ -285,7 +289,7 @@ border-radius: 0px 0px 4px 4px;
 
 .page-footer .logo {
   color: var(--simple-white-color);
-  padding-bottom: 28px;
+  margin-bottom: 28px;
   display: inline-block;
 }
 
@@ -311,7 +315,7 @@ border-radius: 0px 0px 4px 4px;
 }
 
 .page-footer .list li:not(:last-child) {
-  padding-bottom: 12px;
+  margin-bottom: 12px;
 }
 
 /* -------------Portfolio------------- */
@@ -356,7 +360,6 @@ border-radius: 0px 0px 4px 4px;
 
 .portfolio-item {
   width: calc((100% - 60px) / 3);
-  
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -377,7 +380,7 @@ border-radius: 0px 0px 4px 4px;
   margin-bottom: 4px;
 }
 
-.portfoli-item-img{
+.portfoli-item-img {
   display: block;
 }
 
@@ -393,6 +396,7 @@ border-radius: 0px 0px 4px 4px;
   padding-top: 20px;
   padding-bottom: 20px;
   border: 1px solid var(--border-color-in-portfolio);
+  border-top: none;
 }
 
 .portfolio-work-list {
