--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,14 @@
   --secondary-text-color: #757575;
   --bgc-footer-and-hero: #2f303a;
   --bgc-section-team: #f5f4fa;
-  --color-contacts-footer: rgba(255, 255, 255, 0.6);
   --border-color-in-portfolio: #eeeeee;
   --border-color-page-header: #ececec;
   --soc-icon-fill-in-team-section: #afb1b8;
   --footer-soc-bg-color: rgba(255, 255, 255, 0.1);
+  --bg-color-for-work-description: rgba(47, 48, 58, 0.8);
+  --bg-color-pirtfolio-item-hover: rgba(33, 150, 243, 0.9);
+  --color-contacts-footer: rgba(255, 255, 255, 0.6);
+  --backdrop-color-modal: rgba(0, 0, 0, 0.2);
 }
 
 /* -------------Universal------------- */
@@ -118,6 +121,7 @@ p {
   line-height: 1.14;
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-list-item {
   color: var(--secondary-text-color);
@@ -132,8 +136,21 @@ p {
   color: var(--accent-color);
 }
 
-.current {
+.nav-list-item.current {
   color: var(--accent-color);
+  position: relative;
+}
+
+.nav-list-item.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  /* display: block; */
+  height: 4px;
+  width: 100%;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 .icon-header-contact {
@@ -187,6 +204,7 @@ p {
   border-radius: 4px;
   padding: 10px 24px;
   border-width: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -225,6 +243,7 @@ p {
   line-height: 1.14;
   text-transform: uppercase;
   margin-bottom: 10px;
+  font-size: 14px;
 }
 
 .features .list {
@@ -260,17 +279,33 @@ p {
   display: flex;
 }
 
-.work .list-item img {
+.work-img {
   display: block;
 }
 
-.work .list-item:not(:last-child) {
+.work-item:not(:last-child) {
   margin-right: 30px;
 }
 
-.work .list-item {
+.work-item {
   width: calc((100%-60px) / 3);
+  position: relative;
 }
+
+.work-description {
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background-color: var(--bg-color-for-work-description);
+  color: var(--simple-white-color);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 /* -------------Team------------- */
 
 .team {
@@ -326,6 +361,7 @@ p {
 
 .member-soc-icon {
   fill: var(--soc-icon-fill-in-team-section);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .member-soc-link {
@@ -335,6 +371,7 @@ p {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .member-soc-link:hover .member-soc-icon,
@@ -362,10 +399,12 @@ p {
   height: 92px;
   border: 1px solid var(--soc-icon-fill-in-team-section);
   border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-clients {
   fill: var(--soc-icon-fill-in-team-section);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover .icon-clients,
@@ -397,6 +436,7 @@ p {
   line-height: 1.71;
   font-style: normal;
   color: var(--color-contacts-footer);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .company-address:focus,
@@ -416,9 +456,13 @@ p {
   margin-bottom: 12px;
 }
 
-.footer-social-medias .feature-title {
+.footer-social-medias-title {
   color: var(--simple-white-color);
   margin-bottom: 20px;
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
+  font-size: 14px;
 }
 
 .footer-container {
@@ -442,6 +486,7 @@ p {
   justify-content: center;
   border-radius: 50%;
   background-color: var(--footer-soc-bg-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-item:not(:last-child) {
@@ -453,8 +498,60 @@ p {
 }
 
 .footer-soc-link:hover,
-.member-soc-link:focus {
+.footer-soc-link:focus {
   background-color: var(--accent-color);
+}
+
+/* -------------Modal------------- */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--backdrop-color-modal);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
+  width: 528px;
+  min-height: 581px;
+  background-color: var(--simple-white-color);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -150%) scale(1.5);
+}
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+  background-color: var(--simple-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 /* -------------Portfolio------------- */
@@ -469,6 +566,9 @@ p {
   background-color: var(--bgc-section-team);
   color: var(--primary-text-color);
   padding: 6px 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
@@ -501,6 +601,35 @@ p {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+}
+
+.portfolio-item-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-item-cover-text {
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--simple-white-color);
+  background-color: var(--bg-color-pirtfolio-item-hover);
+  height: 100%;
+  padding: 63px 24px;
+
+  position: absolute;
+  top: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: auto;
+}
+
+.portfolio-list-item:hover .portfolio-item-cover-text,
+.portfolio-list-item:focus .portfolio-item-cover-text {
+  transform: translateY(0);
+}
+
+.portfolio-list-item {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover,
