--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,7 @@ p {
   padding: 12px 16px;
   margin-top: 4px;
   resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea:focus,
