--- a/css/styles.css
+++ b/css/styles.css
@@ -614,14 +614,11 @@ p {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-}
-
-.icon-close-modal {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover .icon-close-modal,
-.modal-close:focus .icon-close-modal {
+.modal-close:hover,
+.modal-close:focus {
   fill: var(--accent-color);
 }
 
