--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,12 @@
   --backdrop-color-modal: rgba(0, 0, 0, 0.2);
 }
 
+.footer-soc-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 h1,
 h2,
 h3,
@@ -110,7 +116,7 @@ body {
   display: inline-block;
 }
 
-.logo-accent {
+.logo__accent {
   color: var(--accent-color);
 }
 
@@ -126,16 +132,16 @@ body {
   margin-bottom: 50px;
 }
 
-.page-header {
+.header {
   border-bottom: 1px solid var(--border-color-page-header);
 }
 
-.main-nav {
+.header__content {
   display: flex;
   align-items: center;
 }
 
-.nav-pages-list {
+.navigation__list {
   display: flex;
 }
 
@@ -144,11 +150,11 @@ body {
   margin-left: auto;
 }
 
-.page-header .logo {
+.header .logo {
   margin-right: 93px;
 }
 
-.nav-pages-item:not(:last-child) {
+.navigation__item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -156,7 +162,7 @@ body {
   margin-right: 40px;
 }
 
-.nav-list-item,
+.navigation__link,
 .contact-list-item {
   display: block;
   font-weight: 500;
@@ -165,7 +171,7 @@ body {
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-list-item:hover, .nav-list-item:focus,
+.navigation__link:hover, .navigation__link:focus,
 .contact-list-item:hover,
 .contact-list-item:focus {
   color: var(--accent-color);
@@ -177,11 +183,11 @@ body {
   align-items: center;
 }
 
-.nav-list-item.current {
+.navigation__link.current {
   color: var(--accent-color);
   position: relative;
 }
-.nav-list-item.current::after {
+.navigation__link.current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -464,15 +470,16 @@ body {
 .footer-soc-link {
   width: 44px;
   height: 44px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 50%;
   background-color: var(--footer-soc-bg-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-link:hover, .footer-soc-link:focus {
   background-color: var(--accent-color);
+}
+
+.footer-form {
+  display: flex;
 }
 
 .footer-soc-item:not(:last-child) {
@@ -525,7 +532,7 @@ body {
 }
 
 .footer-submit-btn {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
