--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -61,9 +61,11 @@
 .footer-soc-link {
   width: 44px;
   height: 44px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @extend %centered-flex;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+
   border-radius: 50%;
   background-color: var(--footer-soc-bg-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -71,6 +73,10 @@
   &:focus {
     background-color: var(--accent-color);
   }
+}
+
+.footer-form {
+  display: flex;
 }
 
 .footer-soc-item:not(:last-child) {
@@ -111,7 +117,7 @@
 }
 
 .footer-submit-btn {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
