--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/vars";
+@import "./utils/placeholders";
 
 @import "./base/reset";
 @import "./base/global";
@@ -17,7 +18,6 @@
 @import "./layout/clients";
 @import "./layout/footer";
 @import "./layout/modal";
-
 
 /* -------------Portfolio------------- */
 
